making edit and delete functionality

--- a/jrpg/templates/jrpg/game_list.html
+++ b/jrpg/templates/jrpg/game_list.html
@@ -19,7 +19,16 @@
                     <td>{{ game.publisher }}</td>
                     <td>{{ game.console }}</td>
                     <td>{{ game.adaptation }}</td>
-                    <td></td>
+                    <td>
+                        <a href="{% url 'edit_game' game.id %}">
+                            Edit
+                        </a>
+                    </td>
+                    <td>
+                        <a href="{% url 'delete_game' game.id %}">
+                            Delete
+                        </a>
+                    </td>
                 </tr>
             {% endfor %}
         </tbody>
