--- a/jrpg/templates/jrpg/add_game.html
+++ b/jrpg/templates/jrpg/add_game.html
@@ -1,27 +1,44 @@
+{% load static %}
 {% block content %}
+    <head>
+        <title>
+            jRPG's Django CRUD
+        </title>
+        <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
+    </head>
     <!-- add_game.html -->
-    <form method="post" action="{% url 'add_game' %}">
-        {% csrf_token %}
-        <label for="name">Nom:</label>
-        <input type="text" name="name" id="name" required><br>
+    <div class="form-container">
+        <form class="form" method="post" action="{% url 'add_game' %}">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="name">Nom:</label>
+                <input type="text" name="name" id="name" required><br>
+            </div>
 
-        <label for="publisher">Editeur:</label>
-        <input type="text" name="publisher" id="publisher" required><br>
+            <div class="form-group">
+                <label for="publisher">Editeur:</label>
+                <input type="text" name="publisher" id="publisher" required><br>
+            </div>
 
-        <label for="console">Console:</label>
-        <select name="console" id="console" required>
-            <option value="Android">Android</option>
-            <option value="iOS">iOS</option>
-            <option value="PS3">PS3</option>
-            <option value="SWITCH">SWITCH</option>
-            <option value="3DS">3DS</option>
-            <option value="XBOX">XBOX</option>
-            <option value="PS4">PS4</option>
-        </select><br>
+            <div class="form-group">
+                <label for="console">Console:</label>
+                <select name="console" id="console" required>
+                    <option value="Android">Android</option>
+                    <option value="iOS">iOS</option>
+                    <option value="PS3">PS3</option>
+                    <option value="SWITCH">SWITCH</option>
+                    <option value="3DS">3DS</option>
+                    <option value="XBOX">XBOX</option>
+                    <option value="PS4">PS4</option>
+                </select><br>
+            </div>
 
-        <label for="adaptation">Adaptation:</label>
-        <input type="text" name="adaptation" id="adaptation" required><br>
+            <div class="form-group">
+                <label for="adaptation">Adaptation:</label>
+                <input type="text" name="adaptation" id="adaptation" required><br>
+            </div>
 
-        <input type="submit" value="Ajouter">
-    </form>
+            <input class="submit-button" type="submit" value="Ajouter">
+        </form>
+    </div>
 {% endblock %}
