--- a/jrpg/templates/jrpg/edit_game.html
+++ b/jrpg/templates/jrpg/edit_game.html
@@ -1,26 +1,43 @@
+{% load static %}
 {% block content %}
-    <form method="post" action="{% url 'edit_game' game.id %}">
-        {% csrf_token %}
-        <label for="name">Nom:</label>
-        <input type="text" name="name" id="name" value="{{ game.name }}" required><br>
+    <head>
+        <title>
+            jRPG's Django CRUD
+        </title>
+        <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
+    </head>
+    <div class="form-container">
+        <form class="form" method="post" action="{% url 'edit_game' game.id %}">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="name">Nom:</label>
+                <input type="text" name="name" id="name" value="{{ game.name }}" required><br>
+            </div>
 
-        <label for="publisher">Editeur:</label>
-        <input type="text" name="publisher" id="publisher" value="{{ game.publisher }}" required><br>
+            <div class="form-group">
+                <label for="publisher">Editeur:</label>
+                <input type="text" name="publisher" id="publisher" value="{{ game.publisher }}" required><br>
+            </div>
 
-        <label for="console">Console:</label>
-        <select name="console" id="console" required>
-            <option value="Android" {% if game.console == "Android" %}selected{% endif %}>Android</option>
-            <option value="iOS" {% if game.console == "iOS" %}selected{% endif %}>iOS</option>
-            <option value="PS3" {% if game.console == "PS3" %}selected{% endif %}>PS3</option>
-            <option value="SWITCH" {% if game.console == "SWITCH" %}selected{% endif %}>SWITCH</option>
-            <option value="3DS" {% if game.console == "3DS" %}selected{% endif %}>3DS</option>
-            <option value="XBOX" {% if game.console == "XBOX" %}selected{% endif %}>XBOX</option>
-            <option value="PS4" {% if game.console == "PS4" %}selected{% endif %}>PS4</option>
-        </select><br>
+            <div class="form-group">
+                <label for="console">Console:</label>
+                <select name="console" id="console" required>
+                    <option value="Android" {% if game.console == "Android" %}selected{% endif %}>Android</option>
+                    <option value="iOS" {% if game.console == "iOS" %}selected{% endif %}>iOS</option>
+                    <option value="PS3" {% if game.console == "PS3" %}selected{% endif %}>PS3</option>
+                    <option value="SWITCH" {% if game.console == "SWITCH" %}selected{% endif %}>SWITCH</option>
+                    <option value="3DS" {% if game.console == "3DS" %}selected{% endif %}>3DS</option>
+                    <option value="XBOX" {% if game.console == "XBOX" %}selected{% endif %}>XBOX</option>
+                    <option value="PS4" {% if game.console == "PS4" %}selected{% endif %}>PS4</option>
+                </select><br>
+            </div>
 
-        <label for="adaptation">Adaptation:</label>
-        <input type="text" name="adaptation" id="adaptation" value="{{ game.adaptation }}" required><br>
+            <div class="form-group">
+                 <label for="adaptation">Adaptation:</label>
+                 <input type="text" name="adaptation" id="adaptation" value="{{ game.adaptation }}" required><br>
+            </div>
 
-        <input type="submit" value="Enregistrer">
-    </form>
+            <input class="submit-button" type="submit" value="Save">
+        </form>
+    </div>
 {% endblock %}
