--- a/static/css/components/_form.scss
+++ b/static/css/components/_form.scss
@@ -1,39 +1,3 @@
-.table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-bottom: 20px;
-}
-.table th, .table td {
-  padding: 10px;
-  border: 1px solid #ccc;
-}
-.table th {
-  background-color: #f2f2f2;
-}
-.table tr:nth-child(even) {
-  background-color: #f9f9f9;
-}
-
-.button {
-  display: inline-block;
-  padding: 10px 20px;
-  background-color: #007bff;
-  color: antiquewhite;
-  text-decoration: none;
-  border-radius: 4px;
-  border: none;
-  box-shadow: 0 2px 4px crimson;
-  transition: background-color 0.3s ease-in-out;
-  text-align: center;
-}
-.button:hover {
-  background-color: #0056b3;
-}
-
-.button-container {
-  text-align: center;
-}
-
 .form-container {
   display: flex;
   justify-content: center;
@@ -78,9 +42,8 @@
   border: none;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   transition: background-color 0.3s ease-in-out;
-}
-.submit-button:hover {
-  background-color: #0056b3;
-}
 
-/*# sourceMappingURL=main.css.map */
+  &:hover {
+    background-color: #0056b3;
+  }
+}
