--- a/static/css/components/_add.scss
+++ b/static/css/components/_add.scss
@@ -18,3 +18,10 @@
 .button-container {
   text-align: center;
 }
+
+.btn-add {
+  color: #ffffff;
+  &:hover {
+    background-color: #0056b3;
+  }
+}
